welcome.lessons.welcome.methods.picture.MethodsPicture.scala.error
MethodsPicture:7: error: not found: value color
  faireV(color.YELLOW)
         ^MethodsPicture:8: error: not found: value color
  faireV(color.RED)
         ^MethodsPicture:9: error: not found: value color
  faireV(color.BLUE)
         ^MethodsPicture:10: error: not found: value color
  faireV(color.GREEN)}
         ^MethodsPicture:29: error: not found: value transition2
  for (compteur5 <- 1 to 3) {motif2();transition2()}
                                      ^